--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
   "name": "express-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "scripts": {
-  "start": "node server.js",
-  "postinstall": "npm rebuild sqlite3"
-}
-
     "start": "node server.js",
+    "postinstall": "npm rebuild sqlite3",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
